--- a/views/login.ejs
+++ b/views/login.ejs
@@ -22,7 +22,7 @@
 			</form>
 			<%}%>
 				<div id="login-form">
-					<form action="/login/password" method="post">
+					<form action="/login" method="post">
 						<section>
 							<label for="username">Username</label>
 							<input id="username" name="username" type="text" autocomplete="username" required autofocus>
