--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -25,7 +25,7 @@
                     </li>
                 <% } else { %>
                     <li class="nav-item">
-                        <p class="nav-link">Hello <%= user.username %></p>
+                        <a class="nav-link">Hello <%= user.username %></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/logout">Logout</a>
