--- a/views/temperament.ejs
+++ b/views/temperament.ejs
@@ -22,7 +22,7 @@
           <% temperament.forEach(function(temp) { %>
             <div class="row px-3 py-1 w-100">
               <span class="col py-1 bg-light">
-                <%=temp.Id%>
+                <%=temp.Ids%>
               </span>
               <span class="col py-1 bg-light">
                 <%=temp.Name%>
