--- a/views/species.ejs
+++ b/views/species.ejs
@@ -21,7 +21,7 @@
           <% species.forEach(function(species) { %>
             <div class="row px-3 py-1 w-100">
               <span class="col py-1 bg-light">
-                <%=species.Id%>
+                <%=species.Ids%>
               </span>
               <span class="col py-1 bg-light">
                 <%=species.Name%>
